# wastearr

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  env.sample  wastearr.py  wastearr.rs
.forgejo/workflows/: ci.yaml
