[package]
name = "wastearr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[[bin]]
name = "wastearr"
path = "wastearr.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
comfy-table = { version = "7.1.4", features = ["tty"] }
dirs = "6.0.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.143"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"